Thu Sep  1 02:12:29 2005                        Michael Jennings (mej)

Fix abort stuff.
----------------------------------------------------------------------
Thu Sep  1 02:16:17 2005                        Michael Jennings (mej)

Fix but disable vt100 answerbacks.
----------------------------------------------------------------------
Thu Sep 15 21:55:34 2005                        Michael Jennings (mej)

Support NetWM startup ID's.
----------------------------------------------------------------------
Wed Oct  5 14:41:00 2005                        Michael Jennings (mej)

Fixed an incredibly-difficult-to-track-down missing "break" statement
which caused the "New..." and Ctrl-T functionality to fail to prompt
for a tab name.
----------------------------------------------------------------------
Mon Dec  5 15:46:34 2005                        Michael Jennings (mej)

Prevent firewall bounces from trying for the same port.
----------------------------------------------------------------------
Thu Dec 22 18:32:31 2005                        Michael Jennings (mej)

Cleanups and minor enhancements.
----------------------------------------------------------------------
Wed Jan  4 03:44:04 2006                        Michael Jennings (mej)

X resource tracking/debugging support.
----------------------------------------------------------------------
Wed Jan  4 04:14:14 2006                        Michael Jennings (mej)

Applied patches from Tres Melton <tres@mindspring.com> for SSE2
alignment and other shading-related issues.
----------------------------------------------------------------------
Wed Jan  4 04:22:13 2006                        Michael Jennings (mej)

Update copyright dates.
----------------------------------------------------------------------
Thu Jan  5 14:50:53 2006                        Michael Jennings (mej)

Fixed firewall bounce port checking from 2005-12-05.
----------------------------------------------------------------------